[package]
name = "mysqlbinlog-network"
version = "0.1.0"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
sys-info="0.7.0"
uuid="*"
mysql_binlog = {path="./mysql_binlog-0.3.1"}
mysql = {path = "./mysql-20.1.0"}