[package]
name = "mysqlbinlog-network"
version = "1.0.0"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "mysqlbinlog from MySQL instance"
documentation = "https://docs.rs/mysqlbinlog-network"
keywords = ["binlog", "mysql"]
categories = ["binlog"]
repository = "https://github.com/jiuker/mysqlbinlog_network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
sys-info="0.7.0"
uuid="0.8.2"
mysql_binlog = {path="./mysql_binlog-0.3.1"}
mysql = {path = "./mysql-20.1.0"}