[package]
name = "mysqlbinlog-network"
version = "1.0.9"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "mysqlbinlog from MySQL instance"
documentation = "https://docs.rs/mysqlbinlog-network"
keywords = ["binlog", "mysql"]
categories = ["database"]
repository = "https://github.com/jiuker/mysqlbinlog_network"


[lib]
name = "mysqlbinlog_network"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
sys-info="0.7.0"
uuid="0.8.2"
mysql = "20.1.0"
# mysql-binlog
base64="0.12.3"
bigdecimal="0.1.2"
serde="1.0.126"
serde_derive="1.0.126"
serde_json="1.0.64"
thiserror="1.0.25"
# mysql
[patch.crates-io]
mysql = {path = "src/mysql" }

[dev-dependencies.assert_matches]
version = "1"